Fixed footer on small screen

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -62,11 +62,11 @@ nav a {
 .footer-banner {
     min-height: 0;
 }
-@media (max-width:768px) { 
-    .col-xs-5{
+@media (max-width:790px) { 
+    footer .col-xs-5{
       display: none; /* hides the green section on right on small screens */
     } 
-    .col-xs-7{
+    footer .col-xs-7{
       margin-left: 2em;
     }
 }
@@ -185,8 +185,8 @@ nav a {
       margin-left: 1em;
     }
 
-    .col-xs-5{
-      display: none;
+    .col-xs-5{ /* don't know where this came from */
+      /*display: none; */
     }
 
 }
